--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,10 +7,16 @@ android {
         applicationId "uk.co.openmoments.hillbagging"
         minSdkVersion 24
         targetSdkVersion 29
-        versionCode 1
+        versionCode 2
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         resValue "string", "google_maps_key", (project.findProject("GOOGLE_MAPS_API_KEY") ?: "")
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
     }
     buildTypes {
         release {
