--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "29.0.2"
     defaultConfig {
         applicationId "uk.co.openmoments.hillbagging"
-        minSdkVersion 24
+        minSdkVersion 26
         targetSdkVersion 29
         versionCode 2
         versionName "1.0"
@@ -65,4 +65,5 @@ dependencies {
     androidTestImplementation "androidx.arch.core:core-testing:$rootProject.coreTestingVersion"
 
     implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.30.1'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
 }
