--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ImportExportActivity"></activity>
 
 
         <meta-data android:name="com.google.android.geo.API_KEY" android:value="@string/google_maps_key" />
