--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,4 +68,5 @@ dependencies {
     implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.30.1'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0'
+    implementation 'com.opencsv:opencsv:5.0'
 }
