--- a/gradle.properties
+++ b/gradle.properties
@@ -18,5 +18,5 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 
-GOOGLE_MAPS_API_KEY=AIzaSyA85WsnO77be73pNMBJ-YRZN6xVs40aSYA
+GOOGLE_MAPS_API_KEY=
 
